Creación de las secciones de mikrotik

--- a/src/views/Stock/stock.ejs
+++ b/src/views/Stock/stock.ejs
@@ -396,6 +396,20 @@
                         <span class="sidebar-text">Equipos Asignados</span>
                     </a>
                 </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link" href="/impresoras">
+                        <i class="bi bi-printer me-2"></i>
+                        <span class="sidebar-text">Impresoras</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link " href="/mikrotik">
+                        <i class="bi bi-router me-2"></i>
+                        <span class="sidebar-text">Mikrotiks</span>
+                    </a>
+                </li>
             </ul>
             
             <!-- Bottom -->
